tests/e2e/arg_name_shorthand_error7.error
Error: syntax error in story at line 1, column 12

1|    a = random integer low:1 :2
                 ^^^^^^^^^^^^^^^^

E0118: Service `random` requires arguments to be named
