tests/e2e/arg_name_shorthand_error7.story
a = random integer low:1 :2
